--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "typescript": "^2.5.3"
   },
   "engines": {
-    "node": "6.x",
-    "npm": "3.x"
+    "node": ">=6.x",
+    "npm": ">=3.x"
   }
 }
