--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gradealabs/genji",
-  "version": "1.0.53",
+  "name": "@launchfort/genji",
+  "version": "1.0.6",
   "description": "Compiles .ts/.tsx/.js/.jsx files into a bundle",
   "bin": {
     "genji": "./lib/cli.js"
@@ -23,54 +23,52 @@
     "jsx",
     "tsx"
   ],
-  "author": "Darren Schnare <dschnare@gradealabs.com>",
+  "author": "Darren Schnare <dschnare@launchfort.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gradealabs/genji"
+    "url": "https://github.com/launchfort/genji"
   },
   "bugs": {
-    "url": "https://github.com/gradealabs/genji/issues"
+    "url": "https://github.com/launchfort/genji/issues"
   },
   "license": "MIT",
   "files": [
     "lib"
   ],
   "devDependencies": {
-    "@gradealabs/widowmaker": "2.0.2",
-    "@types/mocha": "2.2.41",
-    "@types/node": "7.0.29",
-    "@types/sinon": "2.3.1",
-    "@types/yargs": "6.6.0",
+    "@launchfort/widowmaker": "2.0.5",
+    "@types/mocha": "5.2.6",
+    "@types/node": "11.11.4",
+    "@types/sinon": "7.0.10",
+    "@types/yargs": "12.0.10",
     "babel": "6.23.0",
-    "babel-eslint": "7.2.3",
+    "babel-eslint": "10.0.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "cross-env": "5.0.1",
-    "eslint": "3.19.0",
-    "eslint-config-standard": "10.2.1",
-    "eslint-plugin-import": "2.3.0",
-    "eslint-plugin-node": "5.0.0",
-    "eslint-plugin-promise": "3.5.0",
-    "eslint-plugin-standard": "3.0.1",
-    "mocha": "3.4.2",
-    "nyc": "11.0.2",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "cross-env": "5.2.0",
+    "eslint": "5.15.3",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0",
+    "mocha": "6.0.2",
+    "nyc": "13.3.0",
     "react": "15.6.1",
-    "sinon": "2.3.4",
-    "source-map-support": "0.4.15",
-    "ts-node": "3.0.6"
+    "sinon": "7.3.0",
+    "source-map-support": "0.5.11",
+    "ts-node": "8.0.3",
+    "typescript": "3.3.4000"
   },
   "dependencies": {
-    "@gradealabs/fs-utils": "2.2.51",
-    "browserify": "14.4.0",
-    "exorcist": "0.4.0",
-    "tsify": "3.0.1",
-    "uglify-js": "3.0.15",
-    "uglifyify": "4.0.0",
-    "watchify": "3.9.0",
-    "yargs": "8.0.1"
-  },
-  "peerDependencies": {
-    "typescript": "^2.5.3"
+    "@launchfort/fs-utils": "2.2.6",
+    "browserify": "16.2.3",
+    "exorcist": "1.0.1",
+    "tsify": "4.0.1",
+    "uglify-js": "3.5.1",
+    "uglifyify": "5.0.1",
+    "watchify": "3.11.1",
+    "yargs": "13.2.2"
   },
   "engines": {
     "node": ">=6.x",
