--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "newLine": "LF",
+    "outDir": "lib",
     "lib": [
       "es2016",
       "dom"
